--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@tanstack/start": "^1.78.2",
     "react": "19.0.0-rc.0",
     "react-dom": "19.0.0-rc.0",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.6.3"
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
