--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,13 @@
     "target": "ES2022",
     "skipLibCheck": true,
     "strictNullChecks": true,
-  },
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["app/components/*"],
+      "@routes/*": ["app/routes/*"],
+      "@stores/*": ["app/stores/*"],
+      "@styles/*": ["app/styles/*"],
+      "@/*": ["app/*"]
+    }
+  }
 }
