add vitest with config for path aliases via tsconfig.json
add react-testing library and implement <Counter /> in/de-crement tests (with Jotai treated as an implementation detail

add .vscode/settings.json file with Todo Tree settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,15 @@
     "target": "ES2022",
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "lib": ["ESNext", "DOM"],
     "baseUrl": ".",
     "paths": {
       "@components/*": ["app/components/*"],
       "@routes/*": ["app/routes/*"],
       "@stores/*": ["app/stores/*"],
       "@styles/*": ["app/styles/*"],
-      "@/*": ["app/*"]
+      "@/*": ["app/*"],
+      "~/*": ["test/*"]
     }
   }
 }
