--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["app/**/*", "test/**/*"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
@@ -7,6 +8,7 @@
     "skipLibCheck": true,
     "strictNullChecks": true,
     "lib": ["ESNext", "DOM"],
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
       "@components/*": ["app/components/*"],
