renamed app to create-b-app
switched to node-server preset for vinxi

add output folders to .gitignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-starter",
+  "name": "create-b-app",
   "type": "module",
   "scripts": {
     "dev": "COMPATIBILITY_DATE=2024-11-02 vinxi dev --port 3033",
