--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "pb:stop": "cd pb && docker compose down"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.78.2",
-    "@tanstack/start": "^1.78.2",
+    "@tanstack/react-router": "^1.79.0",
+    "@tanstack/start": "^1.79.0",
+    "eventsource": "^2.0.2",
     "jotai": "^2.10.1",
+    "pocketbase": "^0.21.5",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
     "rimraf": "^6.0.1",
@@ -41,7 +43,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "vite-tsconfig-paths": "^5.0.1",
+    "vite-tsconfig-paths": "^5.1.0",
     "vitest": "^2.1.4"
   }
 }
