--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
       "@routes/*": ["app/routes/*"],
       "@stores/*": ["app/stores/*"],
       "@styles/*": ["app/styles/*"],
+      "@utils/*": ["app/utils/*"],
+      "@db/*": ["app/db/*"],
       "@/*": ["app/*"],
       "~/*": ["test/*"]
     }
