--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "dev": "vinxi dev --port 2512",
     "build": "vinxi build",
-    "start": "npm run pb:start && vinxi start",
+    "start": "npm run pb:start && npm run build && vinxi start --port 2512",
     "test": "vitest run",
     "test:dev": "vitest dev",
     "test:bench": "vitest bench",
     "pm2:deploy": "PORT=1689 pm2 start -i max --name=create-b-app .output/server/index.mjs",
     "pb:build": "cd pb && CGO_ENABLED=0 go build",
-    "pb:serve": "npm run pb:build && ./pb/pb-bear serve",
+    "pb:serve": "npm run pb:build && ./pb/pb-bear serve --http 127.0.0.1:2511",
     "pb:start": "npm run pb:build && cd pb && docker compose up -d --build pb-bear",
     "pb:stop": "cd pb && docker compose down"
   },
