--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "pb:stop": "cd pb && docker compose down"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.79.0",
-    "@tanstack/start": "^1.79.0",
+    "@tanstack/react-router": "1.79.0",
+    "@tanstack/start": "1.79.0",
+    "@tanstack/start-vite-plugin": "1.79.0",
     "eventsource": "^2.0.2",
-    "jotai": "^2.10.1",
+    "jotai": "^2.10.3",
     "pocketbase": "^0.21.5",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
@@ -36,14 +37,14 @@
     "@types/bun": "latest",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "jsdom": "^25.0.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite-tsconfig-paths": "^5.1.0",
-    "vitest": "^2.1.4"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.6"
   }
 }
