update libraries, especially React to stable 19.0.0
learned new way of creating server functions with typed parameters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,5 +103,10 @@
       "icon": "square-fill"
     }
   },
-  "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)"
+  "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+  "cSpell.words": [
+    "eventsource",
+    "pocketbase",
+    "vinxi"
+  ]
 }
