--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
     "test": "vitest run",
     "test:dev": "vitest dev",
     "test:bench": "vitest bench",
-    "pm2:deploy": "PORT=1689 pm2 start -i max --name=create-b-app .output/server/index.mjs",
+    "pm2:deploy": "PORT=2512 pm2 start -i max --name=create-b-app .output/server/index.mjs",
     "pb:build": "cd pb && CGO_ENABLED=0 go build",
     "pb:serve": "npm run pb:build && ./pb/pb-bear serve --http 127.0.0.1:2511",
     "pb:start": "npm run pb:build && cd pb && docker compose up -d --build pb-bear",
     "pb:stop": "cd pb && docker compose down"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.85.0",
-    "@tanstack/start": "^1.85.0",
-    "@tanstack/start-vite-plugin": "^1.82.5",
+    "@tanstack/react-router": "^1.87.0",
+    "@tanstack/start": "^1.87.0",
+    "@tanstack/start-vite-plugin": "^1.87.0",
     "eventsource": "^2.0.2",
     "jotai": "^2.10.3",
     "pocketbase": "^0.21.5",
-    "react": "^19.0.0-rc-fb9a90fa48-20240614",
-    "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/bun": "latest",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.3",
-    "vitest": "^2.1.6"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
