--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "vinxi": "^0.4.3"
+    "vinxi": "^0.4.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react": "^16.1.0",
