--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "pb:stop": "cd pb && docker compose down"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.92.1",
-    "@tanstack/start": "^1.92.1",
+    "@tanstack/react-router": "^1.92.9",
+    "@tanstack/start": "^1.92.10",
     "@tanstack/start-vite-plugin": "^1.91.1",
+    "@xoid/react": "^1.0.0-beta.12",
     "eventsource": "^2.0.2",
-    "jotai": "^2.10.4",
     "pocketbase": "^0.21.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3",
+    "xoid": "^1.0.0-beta.12",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
+    "daisyui": "^4.12.23",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
