--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pb:stop": "cd pb && docker compose down"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0-beta.8",
     "@tanstack/react-router": "^1.92.9",
     "@tanstack/start": "^1.92.10",
     "@tanstack/start-vite-plugin": "^1.91.1",
@@ -40,11 +41,10 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8"
