--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.0-alpha.58",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0-beta.8",
