--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.0-beta.8",
+    "@tailwindcss/vite": "^4.0.0-beta.8",
     "@tanstack/react-router": "^1.92.9",
     "@tanstack/start": "^1.92.10",
     "@tanstack/start-vite-plugin": "^1.91.1",
@@ -29,7 +30,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
-    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3",
     "xoid": "^1.0.0-beta.12",
     "zod": "^3.24.1"
