renamed pb to backend
add pb:gentypes & adapt npm script pb:dev to include it

update libraries

--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "test:dev": "vitest dev",
     "test:bench": "vitest bench",
     "pm2:deploy": "PORT=2512 pm2 start -i max --name=create-b-app .output/server/index.mjs",
-    "pb:build": "cd pb && CGO_ENABLED=0 go build",
-    "pb:serve": "npm run pb:build && ./pb/pb-bear serve --http 127.0.0.1:2511",
-    "pb:start": "npm run pb:build && cd pb && docker compose up -d --build pb-bear",
-    "pb:stop": "cd pb && docker compose down"
+    "pb:build": "cd backend && CGO_ENABLED=0 go build",
+    "pb:gentypes": "pocketbase-typegen --db backend/pb_data/data.db --out app/types/pocketbase-types.ts",
+    "pb:dev": "npm run pb:build && npm run pb:gentypes && ./backend/pb-bear serve --http 127.0.0.1:2511",
+    "pb:start": "npm run pb:build && cd backend && docker compose up -d --build pb-bear",
+    "pb:stop": "cd backend && docker compose down"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "@tailwindcss/vite": "^4.0.0-beta.8",
-    "@tanstack/react-router": "^1.92.11",
-    "@tanstack/start": "^1.92.11",
+    "@tanstack/react-router": "^1.95.1",
+    "@tanstack/start": "^1.95.1",
     "@tanstack/start-vite-plugin": "^1.91.1",
     "@xoid/react": "^1.0.0-beta.12",
     "eventsource": "^2.0.2",
@@ -43,6 +44,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "daisyui": "^5.0.0-beta.1",
     "jsdom": "^25.0.1",
+    "pocketbase-typegen": "^1.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2",
